# UtilityFunctionLibrary

./: CMakeLists.txt  README.md  buildLibrary.sh
CubicSplines1D/: cubicSplinesFunctions1D.cpp  cubicSplinesFunctions1D.hpp
DataContainer/: dataContainer.cpp
ImportExport/: importExport.cpp  importExport.hpp
ParameterParser/: ParameterParser.cpp  ParameterParser.hpp
ProlateSplines/: prolateSplines.cpp
Source/DataContainer/: dataContainer.hpp
Source/ImportExport/: importExport.hpp
Source/MathematicalOperators/: mathematicalOperators.cpp  mathematicalOperators.hpp
Source/ProlateSplines/: prolateSplines.hpp
Source/RigidMotion/: rigidMotion.cpp  rigidMotion.hpp
Source/UtilityFunctions/: utilityFunctions.hpp  utilityFunctionsVector.cpp
UtilityFunctions/: utilityFunctions.cpp  utilityFunctionsVector.hpp
